[FIX] web: align checkbox with label text in mobile view
Before this commit:
In the mobile view, when a checkbox field had a long label, the checkbox would
appear on top, with the label text displayed below.

After this commit:
In the mobile view, checkbox fields with long labels are now properly aligned,
with the checkbox and label text displayed.

Task-4269578

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -446,7 +446,6 @@
         display: flex;
 
         @include media-breakpoint-down(sm) {
-            flex-wrap: wrap;
             .o_field_boolean {
                 order: -1;
             }
